--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,11 +1,22 @@
 services:
+  golang:
+    build: . # pakai Dockerfile di current dir
+    container_name: golang_container
+    depends_on:
+      - postgres # tunggu postgres jalan dulu
+    ports:
+      - "8080:8080" # map ke host
+    networks:
+      - portofolio_network
+    # command: ["./wait-for-postgres.sh", "postgres"]
+
   postgres:
     image: postgres:latest
     container_name: postgres_container
     environment:
       POSTGRES_USER: root
-      POSTGRES_PASSWORD: secret
-      POSTGRES_DB: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: pos
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
@@ -19,5 +30,5 @@ networks:
     external: true
 volumes:
   postgres_data:
-    driver: local
     name: postgres_data
+    external: true
