--- a/.github/workflows/docker-build-release.yaml
+++ b/.github/workflows/docker-build-release.yaml
@@ -32,6 +32,8 @@ jobs:
         run: |
           docker save $IMAGE_NAME:${GITHUB_REF_NAME} -o $IMAGE_NAME_${GITHUB_REF_NAME}.tar
 
+      - name: Check file exists
+        run: ls -lh
       # 5. Upload tar ke Release GitHub
       - name: Upload Release Asset
         uses: softprops/action-gh-release@v2
