--- a/.github/workflows/docker-build-release.yaml
+++ b/.github/workflows/docker-build-release.yaml
@@ -25,12 +25,12 @@ jobs:
       # 3. Build Docker image
       - name: Build Docker image
         run: |
-          docker build -t $IMAGE_NAME:${GITHUB_REF_NAME} .
+          docker build -t ${IMAGE_NAME}:${GITHUB_REF_NAME} .
 
       # 4. Save image ke .tar
       - name: Save Docker image to tar
         run: |
-          docker save $IMAGE_NAME:${GITHUB_REF_NAME} -o $IMAGE_NAME_${GITHUB_REF_NAME}.tar
+          docker save ${IMAGE_NAME}:${GITHUB_REF_NAME} -o ${IMAGE_NAME}${GITHUB_REF_NAME}.tar
 
       - name: Check file exists
         run: ls -lh
